# gitcheck-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: clippy.yml  rust.yml
src/: cmdline.rs  colors.rs  crawler.rs  error.rs  git.rs  main.rs
