[package]
name = "gitcheck"
version = "0.0.3"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.1"
flexi_logger = "0.16"
git2 = "0.13"
jwalk = "0.6.0"
log = "0.4"
num_cpus = "1.13.0"
regex = "1.4.2"

[profile.release]
lto = "fat"
