[package]
name = "gitcheck"
version = "0.0.5-alpha.0"
authors = ["Maxim Zhukov <mussitantesmortem@gmail.com>"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
flexi_logger = "0.22"
git2 = "0.14"
jwalk = "0.6"
log = "0.4"
num_cpus = "1.13"
regex = "1"
xshell = "0.1"

[profile.release]
lto = "fat"
